bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging_return_types.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging_return_types.graphql
---
Error: Fields in selection set do not merge due to incompatible types
    ╭─[ field_selection_merging_return_types.graphql:3:7 ]
    │
  3 │ ╭─▶   pet {
    ┆ ┆   
  5 │ │         someValue: barkVolume
    │ │                    ─────┬────  
    │ │                         ╰────── First field has type Int
    ┆ ┆   
  8 │ │         someValue: name
    │ │                    ──┬─  
    │ │                      ╰─── Second field has type String!
    ┆ ┆   
 10 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
────╯
